feat(plugin): register composePreviewDaemonStart for desktop modules (#314)
Closes the gap called out in #314 (bonus): the gradle plugin only
registered `composePreviewDaemonStart` for AGP modules via
`AndroidPreviewSupport.registerAndroidTasks`. KMP / JVM / Compose
Multiplatform Desktop modules (`:samples:cmp`, `:samples:cmp-shared`,
`:samples:desktop-daemon-bench`) got no descriptor — meaning the MCP
server's `SubprocessDaemonClientFactory` and the VS Code extension's
`daemonProcess.ts` couldn't reach a desktop daemon at all.

Add `ComposePreviewTasks.registerDesktopDaemonStartTask`, called from
`registerDesktopTasks`. It mirrors the Android registration with
desktop-appropriate inputs:

- New configuration `composePreviewDesktopDaemon` resolves the daemon
  classpath. `:daemon:desktop` is added as a project dependency, which
  transitively pulls in `:daemon:core`, `:renderer-desktop`, and the
  Compose Multiplatform desktop stack — exactly what the daemon JVM needs
  for `ImageComposeScene`-based rendering.
- `mainClass` is the same FQN as Android (`ee.schimke.composeai.daemon.DaemonMain`),
  intentional per `:daemon:desktop`'s `DaemonMain.kt` kdoc — the desktop
  jar is FIRST on the classpath so JVM classloading resolves to the CMP
  implementation.
- Minimal `jvmArgs` — just `-Xmx`. No Robolectric `--add-opens` flags
  apply on desktop.
- `systemProperties` are a strict subset of the Android side: daemon
  protocol / lifecycle keys + `userClassDirs` + `cheapSignalFiles` +
  `previewsJsonPath`. Robolectric / Roborazzi keys are omitted because
  they don't apply to the desktop renderer.
- Per-key `MapProperty.put(...)` and `addAll`/`add` for `jvmArgs`, so the
  configuration cache is happy out of the gate — same shape Android
  recently moved to.

Gated on the in-repo `:daemon:desktop` source tree (no published artefact
yet, same constraint as `:daemon:android`). Out-of-tree consumers continue
to see the `DaemonExtension`-default `enabled = false`.

Validated on 